Add initial skeleton of turn types and prototype battle UI

--- a/planning/data_structure.html
+++ b/planning/data_structure.html
@@ -114,7 +114,7 @@
 
 </div>
 
-<!--AI OPPONENTS-->
+<!--NPC OPPONENTS-->
 <div style='width:225px;float:left;white-space:pre;'>
 <h3 style='margin-left:50px;margin-bottom:3px;'>::AI OPPONENTS::</h3>
 
